feat: PLUT-796 GM alignment for adding fractions
