# api/src/main/kotlin/server/api/SettingsApiServiceImpl.kt
@@ -1,0 +1,11 @@
+package server.api
+
+import engine.context.Setting
+import org.springframework.stereotype.Service
+import server.models.SettingEntry
+
+@Service
+class SettingsApiServiceImpl : SettingsApiService {
+
+    override fun getSettings() = Setting.entries.map { SettingEntry(it.name, it.description) }
+}
