# api/src/main/openapi/api-specification.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 
 info:
   title: 'GeoGebra Solver API'
-  version: '1.3.1-plut-694-1'
+  version: '1.3.1-plut-796-1'
 servers:
   - url: http://localhost:8080/api/v1/
 
@@ -18,6 +18,56 @@ paths:
             application/json:
               schema:
                 $ref: 'VersionInfo.yaml'
+
+  /settings:
+    get:
+      operationId: getSettings
+      description: 'Get the list of possible solver engine settings with their descriptions'
+      responses:
+        '200':
+          description: 'Successfully returned all possible settings'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  title: SettingEntry
+                  properties:
+                    name:
+                      type: string
+                    description:
+                      type: string
+
+  /presets:
+    get:
+      operationId: getPresets
+      description: 'Get the list of setting presets'
+      responses:
+        '200':
+          description: 'Successfully returned all possible presets'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  title: PresetEntry
+                  properties:
+                    name:
+                      type: string
+                    description:
+                      type: string
+                    settings:
+                      type: array
+                      items:
+                        type: object
+                        title: SettingWithValue
+                        properties:
+                          name:
+                            type: string
+                          value:
+                            type: string
 
   /plans:
     get:
